update with toast

--- a/src/app/crm/layout/layout.html
+++ b/src/app/crm/layout/layout.html
@@ -7,8 +7,8 @@
   </div>
   <app-toast
     [ngClass]="{
-      'show-success': stateService.showToast,
-      'show-error': stateService.showError
+      'show-success': mainStateService.showToast,
+      'show-error': mainStateService.showError
     }"
   ></app-toast>
 
