--- a/src/app/crm/login/login.html
+++ b/src/app/crm/login/login.html
@@ -72,7 +72,7 @@
 
   <app-toast
     [ngClass]="{
-      'show-success': stateService.showToast,
-      'show-error': stateService.showError
+      'show-success': mainStateService.showToast,
+      'show-error': mainStateService.showError
     }"
   ></app-toast>
