change courses to kurse

--- a/src/app/customer/create-account/create-account.html
+++ b/src/app/customer/create-account/create-account.html
@@ -1,5 +1,5 @@
 <section class="main-content-customer">
-  <a class="arrow-back" routerLink="/courses/login">
+  <a class="arrow-back" routerLink="/kurse/login">
     <app-back></app-back>
   </a>
 
@@ -8,7 +8,7 @@
   </div>
 
   <p class="description">
-    Hast du schon ein Konto? <a class="new-user-link" routerLink="/courses/login">Anmelden</a>
+    Hast du schon ein Konto? <a class="new-user-link" routerLink="/kurse/login">Anmelden</a>
   </p>
 
   <form [formGroup]="myForm" (ngSubmit)="submit()">
