--- a/src/app/customer/forgot-password/forgot-password.html
+++ b/src/app/customer/forgot-password/forgot-password.html
@@ -1,5 +1,5 @@
 <section class="main-content-customer">
-  <a class="arrow-back" routerLink="/courses/login">
+  <a class="arrow-back" routerLink="/kurse/login">
     <app-back></app-back>
   </a>
   <h1 class="title">Passwort zurücksetzen</h1>
