--- a/src/app/customer/header-auth/header-auth.html
+++ b/src/app/customer/header-auth/header-auth.html
@@ -20,7 +20,7 @@
         <a routerLink="/" class="nav-link"> Zurück </a>
       </li>
       <li>
-        <a routerLink="/courses/login" class="main-btn-start-in-krypto"> Anmelden </a>
+        <a routerLink="/kurse/login" class="main-btn-start-in-krypto"> Anmelden </a>
       </li>
     </ul>
   </nav>
