--- a/src/app/customer/reset-password/reset-password.html
+++ b/src/app/customer/reset-password/reset-password.html
@@ -1,6 +1,6 @@
 <section class="main-content-customer">
   <div class="form-title">
-    <a class="arrow-back" routerLink="/login">
+    <a class="arrow-back" routerLink="/kurse/login">
       <app-back></app-back>
     </a>
 
