--- a/src/app/customer/user-customer/profile/customer-profile.html
+++ b/src/app/customer/user-customer/profile/customer-profile.html
@@ -144,7 +144,7 @@
       </address>
 
       <div class="btn-container">
-        <a href="/crm/kunden" class="new-customer">Zurück</a>
+        <a routerLink="/customer/dashboard" class="new-customer">Zurück</a>
         <button (click)="editDetails()" class="new-customer">Bearbeiten</button>
       </div>
     </div>
