change of the services

--- a/src/app/shared/confirmation/confirmation.html
+++ b/src/app/shared/confirmation/confirmation.html
@@ -8,7 +8,7 @@
 
   <div class="content-section">
     <p>
-      {{ stateService.showConfirmationText() }}
+      {{ mainStateService.showConfirmationText() }}
     </p>
       <a routerLink="/courses/login">Anmelden</a>
   </div>
