--- a/src/app/crm/login/login.scss
+++ b/src/app/crm/login/login.scss
@@ -2,75 +2,20 @@
 
 .login-container {
   width: 100%;
-  max-width: 1200px;
+  max-width: 31.25rem;
   display: flex;
   background: #ffffff;
   border-radius: 10px;
   overflow: hidden;
 }
 
-/* LEFT PANEL  ---------------------------------------- */
-
-.left-panel {
-  width: 50%;
-  background: #f4ebdd;
-  padding: 50px;
-  display: flex;
-  flex-direction: column;
-}
-
-.brand {
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  font-weight: 600;
-  color: #444;
-  margin-bottom: 30px;
-}
-
-.brand-icon {
-  background: #d5a753;
-  color: basic.$thirteenth;
-  font-size: 18px;
-  padding: 10px;
-  border-radius: 8px;
-  margin-right: 10px;
-}
-
-.promo-image {
-  width: 100%;
-  border-radius: 10px;
-  margin-bottom: 30px;
-  object-fit: cover;
-}
-
-.left-panel h2 {
-  font-size: 26px;
-  line-height: 1.3;
-  margin-bottom: 20px;
-  color: #333;
-}
-
-.promo-text {
-  font-size: 15px;
-  color: #6b6b6b;
-  line-height: 1.5;
-}
-
-/* RIGHT PANEL ---------------------------------------- */
-
 .right-panel {
-  width: 50%;
   background: #ffffff;
   padding: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.form-wrapper {
-  width: 100%;
-  max-width: 380px;
+  margin: auto;
 }
 
 .form-wrapper h1 {
@@ -123,29 +68,4 @@ input {
   font-weight: 600;
   cursor: pointer;
   margin-top: 10px;
-}
-
-.forgot {
-  display: block;
-  text-align: center;
-  margin-top: 12px;
-  color: basic.$secondary;
-  font-size: 14px;
-}
-
-.divider {
-  margin: 30px 0;
-  border: none;
-  border-top: 1px solid #eee;
-}
-
-.footer-text {
-  font-size: 13px;
-  color: #888;
-  text-align: center;
-  line-height: 1.5;
-}
-
-.footer-text a {
-  color: basic.$secondary;
 }
