--- a/src/app/shared/confirmation/confirmation.html
+++ b/src/app/shared/confirmation/confirmation.html
@@ -10,6 +10,6 @@
     <p>
       {{ mainStateService.showConfirmationText() }}
     </p>
-      <a routerLink="/courses/login">Anmelden</a>
+      <a routerLink="/kurse/login">Anmelden</a>
   </div>
 </section>
