--- a/src/app/crm/header/header.html
+++ b/src/app/crm/header/header.html
@@ -1,5 +1,21 @@
-<img width="45px" height="45px" class="message" src="/assets/bell.svg" alt="Nachrichten">
+<a href="/">
+    <app-logo></app-logo>
+</a>
+
+<img width="45px" height="45px" class="message" src="/assets/bell.svg" alt="Nachrichten" />
 
 <button (click)="logOut()">
-    <img width="40px" height="40px" class="profile-img" src="/assets/profile.svg" alt="Profile">
+  <img width="40px" height="40px" class="profile-img" src="/assets/profile.svg" alt="Profile" />
+</button>
+
+<button (click)="openMenu()"
+  class="hamburger hamburger--collapse"
+  type="button"
+  [aria-label]="!mainStateService.isMenuOpen ? 'Öffne das Menu' : 'Schließe das Menu'"
+  [aria-expanded]="!mainStateService.isMenuOpen ? false : true"
+  [ngClass]="{'is-active': mainStateService.isMenuOpen}"
+>
+  <span class="hamburger-box">
+    <span class="hamburger-inner"></span>
+  </span>
 </button>
