--- a/src/app/crm/navbar/navbar.html
+++ b/src/app/crm/navbar/navbar.html
@@ -1,46 +1,59 @@
 <ul>
   <li>
     <a href="/" class="logo">
-      <img width="170" height="40" src="./assets/SK-logo.svg" alt="Start in Krypto">
+      <app-logo-text></app-logo-text>
+      <app-logo></app-logo>
     </a> 
   </li>
   <li>
     <button routerLink="/crm/dashboard" routerLinkActive="active">
       <img width="25" height="25" src="./assets/dashboard.svg" alt="">
-      Dashboard
+      <span class="nav-link-text">
+        Dashboard
+      </span>
     </button>
   </li>
   <li>
     <button routerLink="/crm/neu-kunde" routerLinkActive="active">
       <img width="25" height="25" src="./assets/add-customer.svg" alt="">
-      Neuer Kunde
+      <span class="nav-link-text">
+        Neuer Kunde
+      </span>
     </button>
   </li>
   <li>
     <button routerLink="/crm/kunden" routerLinkActive="active">
       <img width="25" height="25" src="./assets/customers.svg" alt="">
-      Alle Kunden
+      <span class="nav-link-text">
+        Alle Kunden
+      </span>
     </button>
   </li>
 
   <li>
     <button routerLink="/crm/bewerbungen" routerLinkActive="active">
       <img width="25" height="25" src="./assets/applies.svg" alt="">
-      Bewerbungen
+      <span class="nav-link-text">
+        Bewerbungen
+      </span>
     </button>
   </li>
   
   <li>
     <button routerLink="/crm/rechnungen" routerLinkActive="active">
       <img width="25" height="25" src="./assets/invoices.svg" alt="">
-      Rechnungen
+      <span class="nav-link-text">
+        Rechnungen
+      </span>
     </button>
   </li>
 
     <li>
     <button routerLink="/crm/algorithmus" routerLinkActive="active">
       <img width="25" height="25" src="./assets/algorithm.svg" alt="">
-      Algorithmus
+      <span class="nav-link-text">
+        Algorithmus
+      </span>
     </button>
   </li>
 
@@ -48,7 +61,9 @@
   <li>
     <button routerLink="einstellungen" routerLinkActive="active">
       <img width="25" height="25" src="./assets/settings.svg" alt="">
-      Einstellungen
+      <span class="nav-link-text">
+        Einstellungen
+      </span>
     </button>
   </li>
 
