--- a/src/app/crm/navbar/navbar.scss
+++ b/src/app/crm/navbar/navbar.scss
@@ -1,58 +1,102 @@
 @use './../../../basic';
 
 ul {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 2rem;
+  height: 100%;
+  min-width: 5rem;
+  li {
     display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    gap: 2rem;
-    height: 100%;
-    li {
-        display: flex;
-        justify-content: center;
+    justify-content: center;
+    align-items: center;
+    height: 1.875rem;
+    background: none;
+    button {
+      display: inline-flex;
+      align-items: center;
+      width: 100%;
+      padding: 0.5rem;
+      gap: 0.5rem;
+      border-radius: basic.$border-radius;
+      &:hover {
+        transition: basic.$first-transition;
+        background: linear-gradient(180deg, #d6a65357, #8f59073f);
+      }
+      .nav-link-text {
         align-items: center;
-        height: 1.875rem;
-        background: none;
-        button {
-            display: flex;
-            align-items: center;
-            width: 100%;
-            gap: 1rem;
-            padding: 0.5rem;
-            &:hover {
-                transition: basic.$first-transition;
-                background: linear-gradient(180deg, #d6a65357, #8f59073f);
-            }
-            img {
-                width: 1.5625rem;
-                height: 1.5625rem;
-            }
-        }
-        button.active {
-            background-color: basic.$primary;
-        }
-        &:nth-child(2) {
-            margin-top: 1rem;
-        }
-        &:nth-last-child(-n + 1) {
-            margin-top: auto;
-        }
+        font-weight: 700;
+        font-size: 1.04rem;
+        padding-inline: 0.3125rem;
+        width: 100%;
+      }
+      img {
+        width: 1.5625rem;
+        height: 1.5625rem;
+      }
     }
+    button.active {
+      background-color: basic.$primary;
+    }
+    &:nth-child(2) {
+      margin-top: 1rem;
+    }
+    &:nth-last-child(-n + 1) {
+      margin-top: auto;
+    }
+  }
 }
-
 
 .logo {
-    display: flex;
-    align-items: center;
-    outline: transparent;
-    &:focus-visible {
+  display: flex;
+  align-items: center;
+  outline: transparent;
+  &:focus-visible {
     border: 2px dotted basic.$primary;
     outline: basic.$primary;
+  }
+  img {
+    &:hover {
+      filter: drop-shadow(2px 4px 6px basic.$primary);
     }
-    img {
-        &:hover {
-        filter: drop-shadow(2px 4px 6px basic.$primary);
-        }
-    }
+  }
 }
 
+app-logo {
+  display: none;
+}
 
+@media (max-width: 60rem) {
+  app-logo {
+    display: flex;
+  }
+  app-logo-text {
+    display: none;
+  }
+  ul {
+    li {
+      button {
+        max-width: 11rem;
+        .nav-link-text {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 37rem) {
+  ul {
+    li {
+      button {
+        .nav-link-text {
+          display: inline;
+        }
+      }
+    }
+    :nth-of-type(1) {
+      display: none;
+    }
+  }
+}
