--- a/src/app/customer/navbar-customer/navbar-customer.html
+++ b/src/app/customer/navbar-customer/navbar-customer.html
@@ -1,34 +1,49 @@
 <ul>
   <li>
-    <a href="/" class="logo">
-      <img width="170" height="40" src="./assets/SK-logo.svg" alt="Start in Krypto">
+ <a href="/" class="logo">
+      <app-logo-text></app-logo-text>
+      <app-logo></app-logo>
     </a> 
   </li>
   <li>
     <button routerLink="/customer/dashboard" routerLinkActive="active">
       <img width="25" height="25" src="./assets/dashboard.svg" alt="">
-      Dashboard
+      <span class="nav-link-text">
+        Dashboard
+      </span>
     </button>
   </li>
   <li>
     <button routerLink="/customer/my-courses/" routerLinkActive="active">
       <img width="25" height="25" src="./assets/add-customer.svg" alt="">
-      Deine Kurse
+      <span class="nav-link-text">
+        Deine Kurse
+      </span>
     </button>
   </li>
 
   <li>
     <button routerLink="/customer/courses/" routerLinkActive="active">
       <img width="25" height="25" src="./assets/add-customer.svg" alt="">
-      Kurse
+      <span class="nav-link-text">
+        Kurse
+      </span>
     </button>
   </li>
 
   <li>
     <button routerLink="einstellungen" routerLinkActive="active">
       <img width="25" height="25" src="./assets/settings.svg" alt="">
-      Einstellungen
+      <span class="nav-link-text">
+        Einstellungen
+      </span>
     </button>
   </li>
 
+</ul>
+
+<ul>
+  <li></li>
+  <li></li>
+  <li></li>
 </ul>
