--- a/src/app/crm/navbar/navbar.scss
+++ b/src/app/crm/navbar/navbar.scss
@@ -94,9 +94,9 @@ app-logo {
           display: inline;
         }
       }
-    }
-    :nth-of-type(1) {
-      display: none;
+      &:has(.logo) {
+        display: none;
+      }
     }
   }
 }
