--- a/src/app/customer/header-customer/header-customer.html
+++ b/src/app/customer/header-customer/header-customer.html
@@ -1,3 +1,7 @@
+<a href="/">
+    <app-logo></app-logo>
+</a>
+
 <img width="45px" height="45px" class="message" src="/assets/bell.svg" alt="Nachrichten">
 
 <button (click)="showDialog()">
@@ -6,3 +10,14 @@
 
 <app-user-customer (click)="closeDialog()" class="hide-container" [ngClass]="mainStateService.isProfileVisible ? 'show-container' : ''"></app-user-customer>
 
+<button (click)="openMenu()"
+  class="hamburger hamburger--collapse"
+  type="button"
+  [aria-label]="!mainStateService.isMenuOpen ? 'Öffne das Menu' : 'Schließe das Menu'"
+  [aria-expanded]="!mainStateService.isMenuOpen ? false : true"
+  [ngClass]="{'is-active': mainStateService.isMenuOpen}"
+>
+  <span class="hamburger-box">
+    <span class="hamburger-inner"></span>
+  </span>
+</button>
