--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,7 +65,7 @@ app-navbar {
   position: sticky;
   top: 0;
   height: 100vh;
-  width: 15rem;
+//   width: 15rem;
   background: #ffff;
   border-right: 1px solid basic.$border-color;
   font-size: 1.25rem;
@@ -118,9 +118,8 @@ button[type='submit']:not(:disabled):hover {
 }
 
 button[type='button'].hamburger:hover {
-    background-color: transparent;
+  background-color: transparent;
 }
-
 
 button.edit:disabled,
 button[type='submit']:disabled {
@@ -311,6 +310,7 @@ app-profile {
     display: flex;
   }
 
+  app-navbar-customer,
   app-navbar {
     display: none;
     flex-direction: column;
