new component upload course

--- a/src/app/crm/navbar/navbar.html
+++ b/src/app/crm/navbar/navbar.html
@@ -6,65 +6,73 @@
     </a> 
   </li>
   <li>
-    <button routerLink="/crm/dashboard" routerLinkActive="active">
+    <a routerLink="/crm/dashboard" routerLinkActive="active">
       <img width="25" height="25" src="./assets/dashboard.svg" alt="">
       <span class="nav-link-text">
         Dashboard
       </span>
-    </button>
+    </a>
   </li>
   <li>
-    <button routerLink="/crm/neu-kunde" routerLinkActive="active">
+    <a routerLink="/crm/neu-kunde" routerLinkActive="active">
       <img width="25" height="25" src="./assets/add-customer.svg" alt="">
       <span class="nav-link-text">
         Neuer Kunde
       </span>
-    </button>
+    </a>
   </li>
   <li>
-    <button routerLink="/crm/kunden" routerLinkActive="active">
+    <a routerLink="/crm/kunden" routerLinkActive="active">
       <img width="25" height="25" src="./assets/customers.svg" alt="">
       <span class="nav-link-text">
         Alle Kunden
       </span>
-    </button>
+    </a>
   </li>
 
   <li>
-    <button routerLink="/crm/bewerbungen" routerLinkActive="active">
+    <a routerLink="/crm/bewerbungen" routerLinkActive="active">
       <img width="25" height="25" src="./assets/applies.svg" alt="">
       <span class="nav-link-text">
         Bewerbungen
       </span>
-    </button>
+    </a>
   </li>
   
   <li>
-    <button routerLink="/crm/rechnungen" routerLinkActive="active">
+    <a routerLink="/crm/rechnungen" routerLinkActive="active">
       <img width="25" height="25" src="./assets/invoices.svg" alt="">
       <span class="nav-link-text">
         Rechnungen
       </span>
-    </button>
+    </a>
   </li>
 
     <li>
-    <button routerLink="/crm/algorithmus" routerLinkActive="active">
+    <a routerLink="/crm/algorithmus" routerLinkActive="active">
       <img width="25" height="25" src="./assets/algorithm.svg" alt="">
       <span class="nav-link-text">
         Algorithmus
       </span>
-    </button>
+    </a>
   </li>
 
+  <li>
+      <a routerLink="/crm/kurse/" routerLinkActive="active">
+        <img width="25" height="25" src="./assets/bitbulb.svg" alt="">
+        <span class="nav-link-text">
+          Kurse
+        </span>
+      </a>
+  </li>
 
   <li>
-    <button routerLink="einstellungen" routerLinkActive="active">
+    <a routerLink="einstellungen" routerLinkActive="active">
       <img width="25" height="25" src="./assets/settings.svg" alt="">
       <span class="nav-link-text">
         Einstellungen
       </span>
-    </button>
+    </a>
   </li>
 
 </ul>
