--- a/src/app/customer/navbar-customer/navbar-customer.html
+++ b/src/app/customer/navbar-customer/navbar-customer.html
@@ -1,6 +1,6 @@
 <ul>
   <li>
- <a href="/" class="logo">
+    <a href="/" class="logo">
       <app-logo-text></app-logo-text>
       <app-logo></app-logo>
     </a> 
@@ -14,21 +14,21 @@
     </button>
   </li>
   <li>
-    <button routerLink="/customer/my-courses/" routerLinkActive="active">
-      <img width="25" height="25" src="./assets/add-customer.svg" alt="">
-      <span class="nav-link-text">
-        Deine Kurse
-      </span>
-    </button>
-  </li>
-
-  <li>
     <button routerLink="/customer/courses/" routerLinkActive="active">
       <img width="25" height="25" src="./assets/add-customer.svg" alt="">
       <span class="nav-link-text">
         Kurse
       </span>
     </button>
+  </li>
+
+  <li>
+      <button routerLink="/customer/my-courses/" routerLinkActive="active">
+        <img width="25" height="25" src="./assets/bitbulb.svg" alt="">
+        <span class="nav-link-text">
+          Deine Kurse
+        </span>
+      </button>
   </li>
 
   <li>
