--- a/src/app/crm/navbar/navbar.scss
+++ b/src/app/crm/navbar/navbar.scss
@@ -13,7 +13,7 @@ ul {
     align-items: center;
     height: 1.875rem;
     background: none;
-    button {
+    a {
       display: inline-flex;
       align-items: center;
       width: 100%;
@@ -36,7 +36,7 @@ ul {
         height: 1.5625rem;
       }
     }
-    button.active {
+    a.active {
       background-color: basic.$primary;
     }
     &:nth-child(2) {
