--- a/src/app/customer/navbar-customer/navbar-customer.scss
+++ b/src/app/customer/navbar-customer/navbar-customer.scss
@@ -32,8 +32,8 @@ ul {
         width: 100%;
       }
       img {
-        width: 1.5625rem;
-        height: 1.5625rem;
+        // width: 1.5625rem;
+        // height: 1.5625rem;
       }
     }
     button.active {
