--- a/src/basic.scss
+++ b/src/basic.scss
@@ -1,26 +1,35 @@
+$main: #000000;
+$primary: #d6a553;
+$secondary: #8f5907;
+$third: linear-gradient(180deg, #d6a65357, #8f59073f);
+$fourth: #dbeafe;
+$fifth: #fef9c3;
+$sixth: #ffffff;
+$seventh: #4e65b8;
+$eighth: #dcfce7;
+$ninth: #064606;
+$tenth: #fee2e2;
+$eleventh: #9e1111;
+$twelfth: #a19d9a; //input letter color
+$thirteenth: #f4f4f4;
+$required: #ff0000;
+$border-color: #e4e5e5;
+$border-radius: 0.625rem;
+$max-width: 80rem;
+$body-bg: #f8f7f6;
+$box-shadow: 0 2px 10px 0 rgb(0 0 0 / 20%);
+$letter-color: #000;
+$first-transition: all 200ms ease-in-out;
+$content-color: #fafafa;
+$footer: #e1e1e1;
+$focus: 2px dotted $primary;
 
-  $main: #000000;
-  $primary: #d6a553;
-  $secondary: #8f5907;
-  $third: linear-gradient(180deg, #d6a65357, #8f59073f);
-  $fourth: rgb(219, 234, 254);
-  $fifth: rgb(254, 249, 195);
-  $sixth: rgb(255, 255, 255);
-  $seventh: rgb(78, 101, 184);
-  $eighth: rgb(220, 252, 231);
-  $ninth: rgb(6, 70, 6);
-  $tenth: rgb(254, 226, 226);
-  $eleventh: rgb(158, 17, 17);
-  $twelfth: #a19d9a;
-  $thirteenth: rgb(244, 244, 244);
-  $required: #ff0000;
-  $border-color: #e4e5e5;
-  $border-radius: 0.625rem;
-  $max-width: 80rem;
-  $body-bg: #f8f7f6;
-  $box-shadow: 0 2px 10px 0 rgb(0 0 0 / 20%);
-  $letter-color: #000;
-  $first-transition: all 200ms ease-in-out;
-  $content-color: #fafafa;
-  $footer: #e1e1e1;
-  $focus: 2px dotted $primary;
+@mixin focus-input($color: $primary) {
+  outline: 0;
+  -webkit-box-shadow:
+    inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 8px $color;
+  box-shadow:
+    inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 8px $color;
+}
