--- a/src/app/customer/login-customer/login-customer.html
+++ b/src/app/customer/login-customer/login-customer.html
@@ -42,7 +42,7 @@
       <input
         autocomplete="current-password"
         id="password"
-        class="input-field input-field-eye-icon"
+        class="input-field"
         [type]="isPasswordVisible ? 'text' : 'password'"
         formControlName="password"
         placeholder="Passwort"
