--- a/src/app/crm/login/login.scss
+++ b/src/app/crm/login/login.scss
@@ -1,71 +1,156 @@
 @use './../../../basic';
 
-.login-container {
-  width: 100%;
-  max-width: 31.25rem;
-  display: flex;
-  background: #ffffff;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.right-panel {
-  background: #ffffff;
-  padding: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-}
-
-.form-wrapper h1 {
-  font-size: 28px;
-  font-weight: 700;
-  color: #333;
-}
-
-.subtitle {
-  color: #7a7a7a;
-  margin-bottom: 30px;
-}
-
-label {
-  display: block;
-  margin-bottom: 6px;
-  font-size: 14px;
-  font-weight: 600;
-}
-
-input {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ddd;
-  border-radius: 6px;
-  margin-bottom: 20px;
-  font-size: 14px;
-}
-
-.password-group {
+.main-content {
   position: relative;
-}
-
-.password-group .eye {
-  position: absolute;
-  right: 12px;
-  top: 12px;
-  font-size: 18px;
-  cursor: pointer;
-}
-
-.login-btn {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  max-width: 23.5rem;
   width: 100%;
-  padding: 12px;
-  background: #d5a753;
-  border: none;
-  border-radius: 6px;
-  color: basic.$thirteenth;
-  font-size: 16px;
-  font-weight: 600;
-  cursor: pointer;
-  margin-top: 10px;
+  background-color: #fff;
+  border-radius: 1.25rem;
+  padding: 1.25rem;
+  margin: .625rem;
+  form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .input-container {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      .input-field {
+        background-color: basic.$body-bg;
+        border: solid 0.0625rem basic.$body-bg;
+        padding-left: 2.5rem;
+        padding-top: 1.125rem;
+        padding-bottom: 1.125rem;
+        width: 100%;
+        height: 3.07rem;
+        border-radius: basic.$border-radius;
+        transition: basic.$first-transition;
+        &:hover {
+          border: solid 0.0625rem basic.$secondary;
+        }
+
+        &:focus {
+          border: solid 0.0625rem basic.$secondary;
+          outline: basic.$secondary;
+        }
+      }
+      input:-webkit-autofill {
+        background-color: basic.$body-bg;
+        box-shadow: 0 0 0px 62.5rem basic.$body-bg inset;
+      }
+      .input-icon {
+        position: absolute;
+        top: 2.375rem;
+        left: 0;
+        padding: 0 0.5625rem;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+
+    .eye-button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: none;
+      position: absolute;
+      top: 2.275rem;
+      right: 0;
+      padding: 0 1.5625rem;
+    }
+
+    .seperator-container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      position: relative;
+      margin-bottom: 1.875rem;
+      &::before {
+        content: '';
+        position: absolute;
+        background-color: basic.$body-bg;
+        height: 0.125rem;
+        width: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      .sep-line-txt {
+        display: flex;
+        border-radius: basic.$border-radius;
+        padding-inline: 0.9375rem;
+        background-color: basic.$body-bg;
+        z-index: 1;
+      }
+    }
+  }
+
+  .btn-container {
+    display: flex;
+    justify-content: center;
+    gap: 1.875rem;
+    margin-bottom: 1.875rem;
+    width: 100%;
+
+    .login-btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      max-width: 10.375rem;
+      width: 100%;
+      font-weight: 700;
+      font-size: 1.125rem;
+      gap: 0.625rem;
+      padding: 0.75rem 1.5625rem;
+      border-radius: basic.$border-radius;
+      color: basic.$thirteenth;
+    }
+    .e-mail-button {
+      width: fit-content;
+      margin-left: auto;
+    }
+    .login-btn {
+      background-color: basic.$primary;
+      border: solid 1px transparent;
+      transition: basic.$first-transition;
+      &:hover {
+        border: solid 1px basic.$primary;
+        background-color: basic.$body-bg;
+        color: basic.$primary;
+      }
+      &:focus {
+        border: solid 1px basic.$primary;
+        background-color: basic.$body-bg;
+        color: basic.$primary;
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .main-content {
+    .btn-container {
+      gap: 0.875rem;
+      .login-btn,
+      .guest-btn {
+        padding: 0.625rem 0.3125rem;
+      }
+    }
+    .legal-imprint-container {
+      gap: 0;
+    }
+  }
 }
