--- a/src/app/crm/login/login.html
+++ b/src/app/crm/login/login.html
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-    <button type="submit" class="main-btn-start-in-krypto" [disabled]="!loginForm.valid">
+    <button type="submit" class="login-btn" [disabled]="!loginForm.valid">
       Login
     </button>
   </form>
