--- a/src/basic.scss
+++ b/src/basic.scss
@@ -2,7 +2,7 @@ $main: #000000;
 $primary: #d6a553;
 $secondary: #8f5907;
 $third: linear-gradient(180deg, #d6a65357, #8f59073f);
-$fourth: #dbeafe;
+$fourth: #f3f4f6;
 $fifth: #fef9c3;
 $sixth: #ffffff;
 $seventh: #4e65b8;
@@ -12,6 +12,7 @@ $tenth: #fee2e2;
 $eleventh: #9e1111;
 $twelfth: #a19d9a; //input letter color
 $thirteenth: #f4f4f4;
+$fourteenth: #f3f4f6;
 $required: #ff0000;
 $border-color: #e4e5e5;
 $border-radius: 0.625rem;
