--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,6 +71,8 @@ app-navbar {
   font-size: 1.25rem;
 }
 
+app-all-courses,
+app-list-course-lessons,
 app-upload-course,
 app-customer-profile,
 app-settings,
