--- a/src/app/crm/upload-course/all-courses.html
+++ b/src/app/crm/upload-course/all-courses.html
@@ -23,57 +23,7 @@
       <div class="card-footer">
         <div class="icons">
         </div>
-        <button routerLink="/crm/kurse/list-lessons">Edit</button>
-      </div>
-    </div>
-
-    <!-- Card -->
-    <div class="card">
-      <div class="card-image bg-mint">
-        <span class="badge draft">DRAFT</span>
-        <span class="badge lessons">18 LESSONS</span>
-      </div>
-
-      <div class="card-body">
-        <h3>Pro</h3>
-        <p>Deep dive into hooks, suspense, and performance optimization.</p>
-
-        <div class="featured">
-          <span>FEATURED LESSON</span>
-          <strong>State Management with Context</strong>
-          <small>Lesson 2 · 18:20m</small>
-        </div>
-      </div>
-
-      <div class="card-footer">
-        <div class="icons">
-        </div>
-        <button>Edit</button>
-      </div>
-    </div>
-
-    <!-- Card -->
-    <div class="card">
-      <div class="card-image bg-teal">
-        <span class="badge published">PUBLISHED</span>
-        <span class="badge lessons">12 LESSONS</span>
-      </div>
-
-      <div class="card-body">
-        <h3>Graphic Design Basics for Social Media</h3>
-        <p>Learn core principles of visual communication.</p>
-
-        <div class="featured">
-          <span>FEATURED LESSON</span>
-          <strong>Color Psychology in Branding</strong>
-          <small>Lesson 5 · 15:10m</small>
-        </div>
-      </div>
-
-      <div class="card-footer">
-        <div class="icons">
-        </div>
-        <button>Edit</button>
+        <button class="main-btn-start-in-krypto edit-button" routerLink="/crm/kurse/list-lessons">Edit</button>
       </div>
     </div>
   </div>
