--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,7 +70,8 @@ app-navbar {
   border-right: 1px solid basic.$border-color;
   font-size: 1.25rem;
 }
-
+app-my-courses,
+app-list-of-lessons,
 app-all-courses,
 app-list-course-lessons,
 app-upload-course,
