--- a/src/app/crm/settings/company/company.html
+++ b/src/app/crm/settings/company/company.html
@@ -2,7 +2,8 @@
     <div class="container-firma">
       <div class="logo">
         <a href="/" class="logo">
-          <img width="60" height="60" [src]="companyControl.company()?.logo"  alt="Start in Krypto">
+          <app-logo></app-logo>
+          <!-- <img width="60" height="60" [src]="companyControl.company()?.logo"  alt="Start in Krypto"> -->
         </a>
       </div>
     <h1>Start in Krypto</h1>
